logs/efb-wechat-slave.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/PyQRCode-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/efb_wechat_slave-2.0.0a1.dist-info'...
Listing './lib/python3.5/site-packages/ehforwarderbot'...
Compiling './lib/python3.5/site-packages/ehforwarderbot/__main__.py'...
***   File "./lib/python3.5/site-packages/ehforwarderbot/__main__.py", line 110
    master_channel: EFBChannel = utils.locate_module(conf['master_channel'], 'master')
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ehforwarderbot/channel.py'...
***   File "./lib/python3.5/site-packages/ehforwarderbot/channel.py", line 34
    channel_name: str = "Empty channel"
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ehforwarderbot/chat.py'...
***   File "./lib/python3.5/site-packages/ehforwarderbot/chat.py", line 46
    self.channel_name: str = None
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ehforwarderbot/coordinator.py'...
***   File "./lib/python3.5/site-packages/ehforwarderbot/coordinator.py", line 23
    profile: str = "default"
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ehforwarderbot/message.py'...
***   File "./lib/python3.5/site-packages/ehforwarderbot/message.py", line 77
    self.attributes: Optional[EFBMsgAttribute] = None
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ehforwarderbot/middleware.py'...
***   File "./lib/python3.5/site-packages/ehforwarderbot/middleware.py", line 20
    middleware_id: str = "efb.empty_middleware"
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ehforwarderbot/status.py'...
***   File "./lib/python3.5/site-packages/ehforwarderbot/status.py", line 21
    self.destination_channel: 'EFBChannel' = None
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ehforwarderbot-2.0.0b0.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itchat'...
Listing './lib/python3.5/site-packages/itchat/components'...
Listing './lib/python3.5/site-packages/itchat/storage'...
Listing './lib/python3.5/site-packages/itchat-1.3.10.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pypng-0.0.18.egg-info'...
Listing './lib/python3.5/site-packages/pyqrcode'...
Listing './lib/python3.5/site-packages/python_magic-0.4.15.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/xmltodict-0.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
